# web-whisper

./: .gh_last_run_id  .gitignore  .gitlab-ci.yml  .python-version  AGENTS.md  BUILD_WINDOWS.md  CLAUDE.md  README-GITHUB.md  README.md  build.py  verify_setup.py
.github/workflows/: build.yml  macos-build.yml  release-lite.yml  release-onefile.yml  release.yml  windows-build.yml  windows-portable.yml
backend/: .gitignore  build_sidecar.py  main.py  patch_gpu.py  requirements.txt  transcribe_optimized.py  transcribe_simple.py  whisper-gui-core-simple.spec  whisper-gui-core.spec
docs/: gitlab-runner-setup.md  windows-build.md  windows-user-guide.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts  webview.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: create_icons.py  icon.icns
frontend/src-tauri/src/: main.rs  main_complex.rs  simple_main.rs
scripts/: github-setup.sh  upload-release.sh
windows-release/: portable.nsi  prepare_portable.py
